<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"

       android:padding="@dimen/_10sdp">

       <TextView
           android:id="@+id/titile"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/alertTittle"
           android:textColor="@color/success_color"
           android:textStyle="bold"
           android:gravity="center_horizontal"
           android:textSize="@dimen/_20sdp"
           />

       <TextView
           android:id="@+id/messageID"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/alertGetMessage"
           android:textColor="@color/black"
           android:layout_marginTop="@dimen/_6sdp"
           android:textSize="@dimen/_15sdp"
           />

       <TextView
           android:id="@+id/ok"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/ok"
           android:gravity="end"
           android:textStyle="bold"
           android:textColor="@color/colorPrimary"
           android:textSize="@dimen/_15sdp"
           android:padding="@dimen/_10sdp"
           />

   </LinearLayout>

</androidx.cardview.widget.CardView>
