<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.DeviceOnOffActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:weightSum="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ControllerIDExt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 android:padding="@dimen/_10sdp"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight=".7"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="sans-serif-condensed-medium"
                android:background="@drawable/popup_relative"/>

            <TextView
                android:id="@+id/searchBtn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/action_search"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed-medium"
                android:background="@drawable/rounded_corner_blue"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/startStopLinear"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="2">

        <LinearLayout
            android:id="@+id/startMotor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@android:color/holo_green_dark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/startMotor"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/white"/>

        </LinearLayout>



        <LinearLayout
            android:id="@+id/stopMotor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@android:color/holo_red_dark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stopMotor"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

</RelativeLayout>